fix: aligning icons to the baseline of the font

--- a/blocks/footer/__social/footer__social.css
+++ b/blocks/footer/__social/footer__social.css
@@ -12,6 +12,8 @@
     grid-row: 4 / 5;
     padding-top: 0;
     align-self: end;
+    /* исключительно для визуального выравнивания по базовой линии шрифта */
+    margin-bottom: 4px;
   }
 }
 
